64966--Fix alignment of arrow on people finder
https://project.mediacurrent.com/slactoday/node/64966

The right-pointing arrow to the left of Advanced search link in
people finder block was not properly aligned.  I modified the vertical
placement of the arrow by moving it up 3px to properly aligned with
advanced search link.

mario h.

--- a/sites/all/themes/slac/css/main.css
+++ b/sites/all/themes/slac/css/main.css
@@ -5998,7 +5998,7 @@ body {
   display: block;
   clear: both;
   padding: 0.4rem 0 0 0.9rem;
-  background: url("../images/arrow-dot-line.png") no-repeat left 15px;
+  background: url("../images/arrow-dot-line.png") no-repeat left 12px;
 }
 @media (min-width: 70em) {
   .frontpage-people-finder .pane-title {
